--- a/.htaccess
+++ b/.htaccess
@@ -14,3 +14,12 @@ RewriteRule . /coppola/index.php [L]
 </IfModule>
 
 # END WordPress
+# BEGIN Simply Static
+# The directives (lines) between "BEGIN Simply Static" and "END Simply Static" are
+# dynamically generated, and should only be modified via WordPress filters.
+# Any changes to the directives between these markers will be overwritten.
+<Files "E:\xampp\htdocs\coppola/wp-content/uploads\simply-static\0b3e1407e1beb180312889e34c4fe4eb-debug.txt">
+require all denied
+require host localhost
+</Files>
+# END Simply Static
